--- a/bin/src/main/resources/templates/layout.html
+++ b/bin/src/main/resources/templates/layout.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <nav th:fragment="menu" class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <a class="navbar-brand" href="#">Sistema</a>
+            <a class="navbar-brand" href="#">Sitema</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
