Corrigido os @Query + criado endpoints para relatório de pedidos + criado templates para relatório de pedidos

--- a/src/main/resources/templates/report/index.html
+++ b/src/main/resources/templates/report/index.html
@@ -9,6 +9,9 @@
             <hr>
             <a href="user-report.html" th:href="@{/report/user}" class="btn btn-primary btn-lg" role="button">Criar relatório de usuários</a>
 	        <div th:include="layout :: footer" id="footer">(footer)</div>
+	        <hr>
+            <a href="order-report.html" th:href="@{/report/order}" class="btn btn-primary btn-lg" role="button">Criar relatório de pedidos</a>
+	        <div th:include="layout :: footer" id="footer">(footer)</div>
 	    </div>
     </body>
 </html>
