--- a/src/main/resources/templates/report/user-report.html
+++ b/src/main/resources/templates/report/user-report.html
@@ -4,7 +4,7 @@
     	<meta charset="UTF-8">
     </head>
     <body>
-        <div class="container">
+        <div class="container text-center">
             <nav th:replace="layout :: menu">(menu)</nav>
             <hr>
             
@@ -25,6 +25,11 @@
 				  <input type="text" name="typeFilter" class="form-control" id="typeFilter" value=""/>
 				</div>
 			  </div>
+			  
+		  	  <small class="form-text text-muted">Deixe em branco os campos com pelo os quais não queira filtrar.</small>
+			
+			  </br>
+			
 			  <div class="row">
 			  	<div class="col"></div>
 			  	<div class="col-2.3">
