--- a/src/main/resources/templates/report/institution-report.html
+++ b/src/main/resources/templates/report/institution-report.html
@@ -4,12 +4,41 @@
     	<meta charset="UTF-8">
     </head>
     <body>
-        <div class="container">
+        <div class="container text-center">
             <nav th:replace="layout :: menu">(menu)</nav>
             <hr>
-			<button class="btn btn-link">
-				<a th:href="@{|/report/download/pdf/institution|}" download="ri.pdf"><span>Baixar relatório de instituição</span></a>
-			</button>
+            
+            <form action="/report/download/institution" method="GET">
+              <div class="row">
+			    <div class="form-group col">
+				  <label for="nameFilter">Nome:</label>
+				  <input type="text" name="nameFilter" class="form-control" id="nameFilter" value=""/>
+				</div>
+				  
+			  	<div class="form-group col">
+			      <label for="emailFilter">Email:</label>
+			      <input type="text" name="emailFilter" class="form-control" id="emailFilter" value=""/>
+			  	</div>
+				  
+				<div class="form-group col">
+				  <label for="typeFilter">Cidade:</label>
+				  <input type="text" name="cityFilter" class="form-control" id="typeFilter" value=""/>
+				</div>
+			  </div>
+			  
+		  	  <small class="form-text text-muted">Deixe em branco os campos com pelo os quais não queira filtrar.</small>
+			
+			  </br>
+			
+			  <div class="row">
+			  	<div class="col"></div>
+			  	<div class="col-2.3">
+			  		<input class="btn btn-primary" type="submit" value="Gerar relatório">
+			  	</div>
+			  	<div class="col"></div>
+			  </div>
+			</form>
+						
 	        <div th:include="layout :: footer" id="footer">(footer)</div>
 	    </div>
     </body>
