Filtrar pedido por usuário requisitante

--- a/src/main/resources/templates/report/institution-pdf-template.html
+++ b/src/main/resources/templates/report/institution-pdf-template.html
@@ -29,12 +29,12 @@
 <body>
 	<table id="institutions">
 		<tr>
-			<th>id</th>
-			<th>name</th>
-			<th>address</th>
-			<th>phone</th>
-			<th>email</th>
-			<th>city</th>
+			<th>ID</th>
+			<th>Nome</th>
+			<th>Endereço</th>
+			<th>Telefone</th>
+			<th>Email</th>
+			<th>Cidade</th>
 		</tr>
 		<th:block th:each="institution : ${institutions}">
 			<tr>
