--- a/src/main/resources/templates/report/user-pdf-template.html
+++ b/src/main/resources/templates/report/user-pdf-template.html
@@ -29,13 +29,13 @@
 <body>
 	<table id="users">
 		<tr>
-			<th>id</th>
-			<th>name</th>
-			<th>email</th>
-			<th>type</th>
-			<th>phone</th>
-			<th>address</th>
-			<th>enabled</th>
+			<th>ID</th>
+			<th>Nome</th>
+			<th>Email</th>
+			<th>Tipo</th>
+			<th>Telefone</th>
+			<th>Endereço</th>
+			<th>Ativado</th>
 		</tr>
 		<th:block th:each="user : ${users}">
 			<tr>
