--- a/src/main/resources/templates/report/order-report.html
+++ b/src/main/resources/templates/report/order-report.html
@@ -32,7 +32,7 @@
 						</div>
 	       			</div>
 	       			
-	       			<small class="form-text text-muted">Para buscar por todos os períodos deixe em branco.</small>
+	       			<small class="form-text text-muted">Para buscar por qualquer período deixe em branco.</small>
        			</div>
        			
        			<div class="border p-3 m-3">
@@ -56,7 +56,7 @@
 						</div>
 	       			</div>
 	       			
-	       			<small class="form-text text-muted">Para buscar por todos os períodos deixe em branco.</small>
+	       			<small class="form-text text-muted">Para buscar por qualquer período deixe em branco.</small>
        			</div>
        			
        			<div class="border p-3 m-3">
@@ -69,7 +69,20 @@
 						</div>
 	       			</div>
 	       			
-	       			<small class="form-text text-muted">Para buscar por todos os status deixe em branco.</small>
+	       			<small class="form-text text-muted">Para buscar por qualquer status deixe em branco.</small>
+       			</div>
+       			
+       			<div class="border p-3 m-3">
+	       			<div class="row">
+		       			<div class="form-group">
+						  <label for="userName" class="col col-form-label">Nome do usuário requisitante</label>
+						  <div class="col">
+						    <input class="form-control" type="text" name="userName" id="userName">
+						  </div>
+						</div>
+	       			</div>
+	       			
+	       			<small class="form-text text-muted">Para buscar por qualquer usuário deixe em branco.</small>
        			</div>
        			
        			<div class="p-3 m-3">
