--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -14,6 +14,9 @@
                   <li class="nav-item active">
                     <a class="nav-link" href="/">Home</a>
                   </li>
+                  <li class="nav-item active">
+                    <a class="nav-link" href="/reports">Relatórios</a>
+                  </li>
                 </ul>
             </div>
         </nav>
