Testes unitários com Mockito e PDFBox para extrair conteúdo do PDF gerado

--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -15,7 +15,7 @@
                     <a class="nav-link" href="/">Home</a>
                   </li>
                   <li class="nav-item active">
-                    <a class="nav-link" href="/reports">Relatórios</a>
+                    <a class="nav-link" href="/report">Relatórios</a>
                   </li>
                 </ul>
             </div>
