Corrigido alguns problemas de encoding do template

--- a/src/main/resources/templates/report/institution-pdf-template.html
+++ b/src/main/resources/templates/report/institution-pdf-template.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
+	<meta charset="UTF-8"/>
 	<style>
 		#institutions {
 		    font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
