--- a/src/main/resources/templates/report/order-pdf-template.html
+++ b/src/main/resources/templates/report/order-pdf-template.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
+	<meta charset="UTF-8"/>
 	<style>
 		#orders {
 		    font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
