--- a/src/main/resources/templates/user/form.html
+++ b/src/main/resources/templates/user/form.html
@@ -20,18 +20,18 @@
                     <div class="form-group">
                         <label for="slctipo">Tipo</label>
                         <select class="form-control" id="slctipo" >
-                            <option>Físico</option>
-                            <option>Jurídico</option>
+                            <option>Fisico</option>
+                            <option>Juridico</option>
                             <option>Outros</option>
                         </select>
                     </div>
                     <div class="form-group">
                         <label for="txtphone">Telefone</label>
-                        <input type="text" class="form-control" id="txtphone" placeholder="Phone">
+                        <input type="text" class="form-control" id="txtphone" placeholder="Telefone">
                     </div>
                     <div class="form-group">
-                        <label for="txtaddress">Endereço</label>
-                        <input type="text" class="form-control" id="txtaddress" placeholder="Address">
+                        <label for="txtaddress">Endereco</label>
+                        <input type="text" class="form-control" id="txtaddress" placeholder="Endereco">
                     </div>
                     <div class="form-group">
                         <label for="slcCity">Cidade</label>
