--- a/src/main/resources/templates/user/index.html
+++ b/src/main/resources/templates/user/index.html
@@ -1,34 +1,37 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-    <head th:include="layout :: htmlhead"></head>
+    <head th:include="layout :: htmlhead">
+    
+    <style type="text/css">
+		.mdl-layout {
+			align-items: center;
+		  justify-content: center;
+		}
+		.mdl-layout__content {
+			padding: 100px;
+			flex: none;
+		}
+	</style>
+    
+    </head>
     <body>
         <div class="container">
             <nav th:replace="layout :: menu">(menu)</nav>
-            <a href="form.html" th:href="@{/user/new}" class="btn btn-primary btn-lg" role="button">Cadastrar</a>
+            
             <div class="border border-dark">
-                <table class="table">
-                    <thead class="thead-light"> 
-                        <tr>
-                            <th scope="col">Nome</th>
-                            <th scope="col">Sexo</th>
-                            <th scope="col"></th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr scope="row" th:each="user : ${listuser}">
-                            <td th:text="${user.nome}"></td>
-                            <td th:text="${user.email}"></td>
-                            <td th:text="${user.type}"></td>
-                            <td th:text="${user.phone}"></td>
-                            <td th:text="${user.address}"></td>
-                            <td th:text="${user.city}"></td>
-                            <td>
-                                <a href="#" class="btn btn-secondary btn-lg" role="button">Alterar</a>
-                                <a href="#" class="btn btn-warning btn-lg" role="button">Excluir</a>
-                            </td>
-                        </tr>
-                    </tbody>
-                </table>
+                <div class="form-group">
+                        <label for="txtnome">Usuario</label>
+                        <input type="text" class="form-control" id="txtuser" placeholder="Usuario">
+                    </div>
+                    <div class="form-group">
+                        <label for="txtemail">Senha</label>
+                        <input type="password" class="form-control" id="txtpassword" placeholder="Senha">
+                    </div>
+                    <div class="mdl-card__actions mdl-card--border" style="text-align:center;">
+                    <button type="submit" class="btn btn-primary">Acessar</button>
+                    <button type="submit" class="btn btn-primary">Esqueci a senha</button>
+                    <a href="form.html" th:href="@{/user/new}" class="btn btn-primary" role="button">Cadastrar</a>
+                    </div>
             </div>
         </div>        
         <div th:include="layout :: footer" id="footer">(footer)</div>
