Gerar relatório de pedidos ordenados pela data de criação em decrescente ou crescente

--- a/src/main/resources/templates/report/order-report.html
+++ b/src/main/resources/templates/report/order-report.html
@@ -85,6 +85,34 @@
 	       			<small class="form-text text-muted">Para buscar por qualquer usuário deixe em branco.</small>
        			</div>
        			
+       			<div class="border p-3 m-3">
+	       			<div class="row">
+	       				<div class="form-group">
+	       					<label for="orderOption" class="col col-form-label">Ordernar pela data de criação do pedido</label>
+	       					<div class="col">
+	       						<div id="orderOption" class="btn-group btn-group-toggle" data-toggle="buttons">
+									<label class="btn btn-secondary active">
+										<input type="radio" name="orderByDesc" value="false" checked> Crescente
+									</label>
+									<label class="btn btn-secondary">
+										<input type="radio" name="orderByDesc" value="true"> Decrescente
+									</label>
+	       						</div>
+	       					</div>
+	       				</div>
+	       			</div>
+       			</div>
+       			
+       			<!-- NÃO EXCLUA ESTE CÓDIGO (FUNCIONA) (É POR RADIO BUTTON) (Menos bonito)
+    			<div class="btn-group btn-group-toggle" data-toggle="buttons">
+				  <label class="btn btn-secondary active">
+				    <input type="radio" name="orderByDesc" id="option1" autocomplete="off" value="false" checked> Crescente
+				  </label>
+				  <label class="btn btn-secondary">
+				    <input type="radio" name="orderByDesc" id="option2" autocomplete="off" value="true"> Decrescente
+				  </label>
+				</div>
+				-->
        			<div class="p-3 m-3">
        				<input class="btn btn-primary" type="submit" value="Gerar relatório">
        			</div>
