--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -21,6 +21,7 @@
         <div th:fragment="footer" id="footer">
             <script th:src="@{/webjars/jquery/3.0.0/jquery.min.js}"></script>
             <script th:src="@{/webjars/bootstrap/4.0.0/js/bootstrap.min.js}"></script>
+            <script th:src="@{/webjars/jquery-maskedinput/1.3.1/jquery.maskedinput.min.js}"></script>
         </div>
     </body>
 </html>
