--- a/src/main/resources/static/css/accessoryList.css
+++ b/src/main/resources/static/css/accessoryList.css
@@ -2,8 +2,15 @@ body{
 	font-family: 'Roboto Mono', monospace;
 }
 
+.logo{
+	width: 5%;
+	heigth: 5%;
+	margin: 5px;
+}
+
 .card{
 	margin-left: 6%;
+	margin-bootom: 5%;
 	box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
 }
 
