--- a/src/main/resources/templates/catalog/accessoryList.html
+++ b/src/main/resources/templates/catalog/accessoryList.html
@@ -1,38 +1,38 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-    <head th:include="layout :: htmlhead">
-    	<meta charset="UTF-8">
-    </head>
-    <body>
-	    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-	  		<a href="#">
-	  			<img src="/image/logoColab.jpg" class="logo">
-	  		</a>
-
-	  		<div class="collapse navbar-collapse" id="navbarNav">
-	    		<ul class="navbar-nav">
-	      			<li class="nav-item active">
-	        			
-	      			</li>
-	    		</ul>
-	  		</div>
+	<head th:include="layout :: htmlhead">
+		<meta charset="UTF-8">
+	</head>
+	<body>
+		<nav class="navbar navbar-expand-lg navbar-light bg-light">
+			<img src="/image/logoColab.jpg" class="logo">
+			<div class="collapse navbar-collapse" id="navbarNav">
+				<ul class="navbar-nav">
+					<li class="nav-item active"></li>
+					<li class="navbar-brand">Catálogo de Acessórios</li>
+				</ul>
+			</div>
 		</nav>
-    
-        <div class="jumbotron">
-        	<h1>Catálogo de Acessórios</h1>
-        </div>
-        
-        <div class="container">
-        	<div class="row" >
-	        	<div class="card col-md-3" th:each="umpac : ${listAccessory}">
-	  				<img class="card-img-top" src="/image/item.png" alt="Card image cap">
-	  				<div class="card-body">
-	    				<h5 class="card-title" th:text="${umpac.name}"></h5>
-	    				<p class="card-text" th:text="${umpac.description}"></p>
-	    				<a href="#" class="btn btn-primary">Mais</a>
-	  				</div>
+
+		<div class="container">
+			<div class="row">
+				<div class="card-banner" align="center">
+					<h2>Alimentação</h2>
 				</div>
-        	</div>
-        </div>
-    </body>
+			</div>
+			<div class="container">
+				<div class="row">
+					<div class="card col-md-3" th:each="umpac : ${listAccessory}">
+						<img class="card-img-top" src="/image/item.png"
+							alt="Card image cap">
+						<div class="card-body">
+							<h5 class="card-title" th:text="${umpac.name}"></h5>
+							<p class="card-text" th:text="${umpac.description}"></p>
+							<a href="#" class="btn btn-primary">Mais</a>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</body>
 </html>
