--- a/src/main/resources/templates/institution/form.html
+++ b/src/main/resources/templates/institution/form.html
@@ -5,7 +5,7 @@
         <div class="container">
             <nav th:replace="layout :: menu">(menu)</nav>
             <div class="border border-dark">
-                  <form th:action="@{/Institution/(form)}" th:object="${institution}" action="#" method="post">
+                  <form th:action="@{/institution/(form)}" th:object="${institution}" action="#" method="post">
                     <input type="hidden" id="txtid" th:field="*{id}" />
                     <div class="form-group">
                         <label for="txtnome">Nome Instituicao</label>
@@ -21,7 +21,7 @@
                     </div>
                     <div class="form-group">
                         <label for="slcphone">Telefone</label>
-                        <input type="text" class="form-control" id="txtphone" placeholder="telefone">
+                        <input type="text" th:field="*{phone}" class="form-control" id="txtphone" placeholder="telefone">
                     </div>
                     <div class="form-group">
                         <label for="slcemail">Email</label>
