--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -17,6 +17,9 @@
                   <li class="nav-item active">
                     <a class="nav-link" href="/report">Relatórios</a>
                   </li>
+                  <li class="nav-item active">
+                    <a class="nav-link" href="/institution">Instituicao</a>
+                  </li>
                 </ul>
             </div>
         </nav>
