--- a/src/main/resources/templates/user/form.html
+++ b/src/main/resources/templates/user/form.html
@@ -21,7 +21,7 @@
                         <input type="text" class="form-control" id="txtphone" placeholder="Telefone" th:field="*{phone}">
                     </div>
                     <div class="form-group">
-                        <label for="txtaddress">Endereco</label>
+                        <label for="txtaddress">Endereço</label>
                         <input type="text" class="form-control" id="txtaddress" placeholder="Endereco" th:field="*{address}">
                     </div>
                     <div class="form-group">
