--- a/src/main/resources/templates/user/index.html
+++ b/src/main/resources/templates/user/index.html
@@ -1,39 +1,65 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-    <head th:include="layout :: htmlhead">
-    
-    <style type="text/css">
-		.mdl-layout {
-			align-items: center;
-		  justify-content: center;
-		}
-		.mdl-layout__content {
-			padding: 100px;
-			flex: none;
-		}
-	</style>
-    
-    </head>
+    <head th:include="layout :: htmlhead"></head>
     <body>
         <div class="container">
             <nav th:replace="layout :: menu">(menu)</nav>
-            
+            <a href="form.html" th:href="@{/user/new}" class="btn btn-primary" role="button">Cadastrar</a>
             <div class="border border-dark">
-                <div class="form-group">
-                        <label for="txtnome">Usuario</label>
-                        <input type="text" class="form-control" id="txtuser" placeholder="Usuario">
-                    </div>
-                    <div class="form-group">
-                        <label for="txtemail">Email</label>
-                        <input type="text" class="form-control" id="txtemail" placeholder="Email">
-                    </div>
-                    <div class="mdl-card__actions mdl-card--border" style="text-align:center;">
-                    <button type="submit" class="btn btn-primary">Acessar</button>
-                    <a href="form.html" th:href="@{/user/list}" class="btn btn-primary" role="button">Listar Usuarios</a>
-                    <a href="form.html" th:href="@{/user/new}" class="btn btn-primary" role="button">Cadastrar</a>
-                    </div>
+                <table class="table">
+                    <thead class="thead-light"> 
+                        <tr>
+                            <th scope="col">Nome</th>
+                            <th scope="col">Email</th>
+                            <th scope="col">Telefone</th>
+                            <th scope="col">Endereço</th>
+                            <th scope="col"></th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr scope="row" th:each="user : ${listuser}">
+                            <td th:text="${user.name}"></td>
+                            <td th:text="${user.email}"></td>
+                            <td th:text="${user.phone}"></td>
+                            <td th:text="${user.address}"></td>
+                            <td>
+                                <a href="form.html" th:href="@{'/user/modify/' + ${user.id}}" class="btn btn-secondary btn-lg" role="button">Alterar</a>
+                                <a href="#" class="btn btn-warning btn-lg" role="button" data-toggle="modal" data-target="#confirmExclusion" th:data-id="${user.id}">Excluir</a>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
             </div>
-        </div>        
+            <div class="modal fade" id="confirmExclusion" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title">Confirmação de exclusão</h5>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">X</span>
+                            </button>
+                        </div>
+                        <div class="modal-body">
+                            <p>Confirmar a exclusão deste registro do Usuario?</p>
+                        </div>
+                        <div class="modal-footer">
+                            <a href="#" class="btn btn-warning btn-lg" id="btnConf" role="button">Sim</a>
+                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
         <div th:include="layout :: footer" id="footer">(footer)</div>
+        <script th:inline="javascript">
+          /*<![CDATA[*/
+               $('#confirmExclusion').on('show.bs.modal', function (event) {
+                  var button = $(event.relatedTarget)
+                  var recipient = button.data('id')
+                  var modal = $(this)
+                  modal.find('#btnConf').attr("href","/user/remove/" + recipient)
+                })
+           /*]]>*/
+        </script> 
     </body>
 </html>
