--- a/src/main/resources/templates/report/accessory-pdf-template.html
+++ b/src/main/resources/templates/report/accessory-pdf-template.html
@@ -37,7 +37,7 @@
 			<th>Função</th>
 			<th>Código</th>
 		</tr>
-		<th:block th:each="accessory : ${accessories}">
+		<th:block th:each="accessory : ${assistiveaccessory}">
 			<tr>
 				<td th:text="${accessory.id}"></td>
 				<td th:text="${accessory.name}"></td>
