--- a/src/main/resources/templates/report/accessory-report.html
+++ b/src/main/resources/templates/report/accessory-report.html
@@ -12,7 +12,7 @@
               <div class="row">
 			    <div class="form-group col">
 				  <label for="categoryFilter">Category:</label>
-				  <input type="text" name="nameFilter" class="form-control" id="categoryFilter" value=""/>
+				  <input type="text" name="categoryFilter" class="form-control" id="categoryFilter" value=""/>
 				</div>
 			</div>
 			  <div class="row">
