relatorio de categoria

--- a/src/main/resources/templates/report/choose-report-type.html
+++ b/src/main/resources/templates/report/choose-report-type.html
@@ -12,7 +12,10 @@
             <a href="order-report.html" th:href="@{/report/order}" class="btn btn-primary btn-lg" role="button">Criar relatório de pedidos</a>
 	        <hr>
 	        <a href="user-report.html" th:href="@{/report/institution}" class="btn btn-primary btn-lg" role="button">Criar relatório de instituição</a>
-	        <div th:include="layout :: footer" id="footer">(footer)</div>
+	        <hr>
+	        <a href="user-report.html" th:href="@{/report/category}" class="btn btn-primary btn-lg" role="button">Criar relatório de acessórios por categoria</a>
 	    </div>
+	    
+	    <div th:include="layout :: footer" id="footer">(footer)</div>
     </body>
 </html>
