--- a/src/main/resources/templates/consultecategory/index.html
+++ b/src/main/resources/templates/consultecategory/index.html
@@ -1,21 +1,33 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>Consultar categoria</title>
-    </head>
+<html xmlns:th="http://www.thymeleaf.org">
+    <head th:include="layout :: htmlhead"></head>
     <body>
-        <table>
-            <thead>
-                <tr>
-                     <th>Nome</th>
-                </tr>
-            </thead>
-            <tbody>
-                 <tr>
-                     <td>Zezinho</td>
-                     <td>Masculino</td>
-                 </tr>
-            </tbody>
-        </table>
+         <div class="container">
+            <nav th:replace="layout :: menu">(menu)</nav>
+            <a href="#" class="btn btn-primary btn-lg" role="button" id="search-btn">Search</a>
+            <input type="text" id="search-input">
+            <div class="border border-dark">
+                <table class="table">
+                    <thead class="thead-light">
+                        <tr>
+                            <th scope="col">Nome</th>
+                            <th scope="col">ID</th>
+                            <th scope="col"></th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr scope="row" th:each="umpac : ${listcategory}">
+                            <td></td>
+                            <td></td>
+                            <td>
+                                <a href="#" class="btn btn-secondary btn-lg" role="button">Alterar</a>
+                                <a href="#" class="btn btn-warning btn-lg" role="button">Excluir</a>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+        <div th:include="layout :: footer" id="footer">(footer)</div>
     </body>
 </html>
