adicionando novos arquivos na branch

--- a/src/main/resources/templates/report/accessory-report.html
+++ b/src/main/resources/templates/report/accessory-report.html
@@ -11,7 +11,7 @@
             <form action="/report/download/accessory" method="GET">
               <div class="row">
 			    <div class="form-group col">
-				  <label for="categoryFilter">Category:</label>
+				  <label for="categoryFilter">Tipo de acessório (categoria):</label>
 				  <input type="text" name="categoryFilter" class="form-control" id="categoryFilter" value=""/>
 				</div>
 			</div>
