--- a/src/main/resources/templates/report/choose-report-type.html
+++ b/src/main/resources/templates/report/choose-report-type.html
@@ -12,6 +12,8 @@
             <a href="order-report.html" th:href="@{/report/order}" class="btn btn-primary btn-lg" role="button">Criar relatório de pedidos</a>
 	        <hr>
 	        <a href="user-report.html" th:href="@{/report/institution}" class="btn btn-primary btn-lg" role="button">Criar relatório de instituição</a>
+	        <hr>
+            <a href="accessory-report.html" th:href="@{/report/accessory}" class="btn btn-primary btn-lg" role="button">Criar relatório de número de peças por tipo de acessório</a>
 	        <div th:include="layout :: footer" id="footer">(footer)</div>
 	    </div>
     </body>
