--- a/src/main/resources/templates/catalog/accessoryList.html
+++ b/src/main/resources/templates/catalog/accessoryList.html
@@ -26,8 +26,8 @@
 						<img class="card-img-top" src="/image/item.png"
 							alt="Card image cap">
 						<div class="card-body">
-							<h5 class="card-title" th:text="${umpac.name}"></h5>
-							<p class="card-text" th:text="${umpac.description}"></p>
+							<h5 class="card-title" th:text="${umpac.assistiveAccessory.name}"></h5>
+							<p class="card-text" th:text="${umpac.assistiveAccessory.description}"></p>
 							<a href="#" class="btn btn-primary">Mais</a>
 						</div>
 					</div>
