--- a/src/main/resources/templates/user/list.html
+++ b/src/main/resources/templates/user/list.html
@@ -12,7 +12,7 @@
                             <th scope="col">Nome</th>
                             <th scope="col">Email</th>
                             <th scope="col">Telefone</th>
-                            <th scope="col">Endere√ßo</th>
+                            <th scope="col">EndereÁo</th>
                             <th scope="col"></th>
                         </tr>
                     </thead>
@@ -34,13 +34,13 @@
                 <div class="modal-dialog" role="document">
                     <div class="modal-content">
                         <div class="modal-header">
-                            <h5 class="modal-title">Confirma√ß√£o de exclus√£o</h5>
+                            <h5 class="modal-title">ConfirmaÁ„o de exclus„o</h5>
                             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                 <span aria-hidden="true">X</span>
                             </button>
                         </div>
                         <div class="modal-body">
-                            <p>Confirmar a exclus√£o deste registro do Usuario?</p>
+                            <p>Confirmar a exclus„o deste registro do Usuario?</p>
                         </div>
                         <div class="modal-footer">
                             <a href="#" class="btn btn-warning btn-lg" id="btnConf" role="button">Sim</a>
