--- a/src/main/resources/templates/report/institution-report.html
+++ b/src/main/resources/templates/report/institution-report.html
@@ -25,12 +25,25 @@
 				  <input type="text" name="cityFilter" class="form-control" id="typeFilter" value=""/>
 				</div>
 			  </div>
+			  <small class="form-text text-muted" style="margin-top: -10px;">Deixe em branco os campos com pelo os quais não queira filtrar.</small>
 			  
-		  	  <small class="form-text text-muted">Deixe em branco os campos com pelo os quais não queira filtrar.</small>
+	       			<div class="row" style="display: block; margin-top: 10px;">
+	       				<div class="form-group">
+	       					<label for="orderOption" class="col col-form-label">Ordernar pelo nome da instituição</label>
+	       					<div class="col">
+	       						<div id="orderOption" class="btn-group btn-group-toggle" data-toggle="buttons">
+									<label class="btn btn-secondary active">
+										<input type="radio" name="isDesc" value="false" checked> Crescente
+									</label>
+									<label class="btn btn-secondary">
+										<input type="radio" name="isDesc" value="true"> Decrescente
+									</label>
+	       						</div>
+	       					</div>
+	       				</div>
+	       			</div>
 			
-			  </br>
-			
-			  <div class="row">
+			  <div class="row" style="margin-top: 20px;">
 			  	<div class="col"></div>
 			  	<div class="col-2.3">
 			  		<input class="btn btn-primary" type="submit" value="Gerar relatório">
