cadastro de cidade

--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -18,6 +18,8 @@
                   </li>
                   <li class="nav-item active">
                     <a class="nav-link" href="/report">Relatórios</a>
+                  <li class="nav-item active">
+                    <a class="nav-link" href="city">Cidades</a>
                   </li>
                 </ul>
             </div>
