--- a/src/main/resources/templates/city/index.html
+++ b/src/main/resources/templates/city/index.html
@@ -4,39 +4,39 @@
     <body>
         <div class="container">
             <nav th:replace="layout :: menu">(menu)</nav>
-             <a href="form.html" th:href="@{/category/novo}" class="btn btn-primary btn-lg" role="button">Nova</a>
+            <a href="form.html" th:href="@{/city/novo}" class="btn btn-primary btn-lg" role="button">Nova Cidade</a>
             <div class="border border-dark">
                 <table class="table">
                     <thead class="thead-light"> 
                         <tr>
-		                    <th scope="col">Id</th>
-		                   <th scope="col">Nome</th>
-		                   <th scope="col"></th>
-		                </tr>
-		            </thead>
-		            <tbody>
-		                <tr th:each="umcat : ${listacat}">
-		                    <td th:text="${umcat.id}"></td>
-		                    <td th:text="${umcat.name}"></td>
-		                     <td>
-		                     	<a href="form.html" th:href="@{'/category/update/' + ${umcat.id}}" class="btn btn-secondary btn-lg" role="button">Alterar</a>
-                                <a href="#" class="btn btn-warning btn-lg" role="button" data-toggle="modal" data-target="#confirmaExclusao" th:data-id="${umcat.id}">Excluir</a>
+                            <th scope="col">Nome</th>
+                            <th scope="col">Estado</th>
+                            <th scope="col"></th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr scope="row" th:each="umcity : ${listacity}">
+                            <td th:text="${umcity.name}"></td>
+                            <td th:text="${umcity.state}"></td>
+                            <td>
+                                <a href="form.html" th:href="@{'/city/update/' + ${umcity.id}}" class="btn btn-secondary btn-lg" role="button">Alterar</a>
+                                <a href="#" class="btn btn-warning btn-lg" role="button" data-toggle="modal" data-target="#confirmaExclusao" th:data-id="${umcity.id}">Excluir</a>
                             </td>
-		                </tr>
-		            </tbody>
-		        </table>
-		    </div>
-        	<div class="modal fade" id="confirmaExclusao" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+            <div class="modal fade" id="confirmaExclusao" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
                 <div class="modal-dialog" role="document">
                     <div class="modal-content">
                         <div class="modal-header">
-                            <h5 class="modal-title">Confirmar exclusï¿½o de categoria</h5>
+                            <h5 class="modal-title">Confirmação de exclusão</h5>
                             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                 <span aria-hidden="true">X</span>
                             </button>
                         </div>
                         <div class="modal-body">
-                            <p>Vocï¿½ tem certeza que deseja excluir a categoria?</p>
+                            <p>Confirma a exclusão deste registro da Cidade?</p>
                         </div>
                         <div class="modal-footer">
                             <a href="#" class="btn btn-warning btn-lg" id="btnConf" role="button">Sim</a>
@@ -53,9 +53,9 @@
                   var button = $(event.relatedTarget)
                   var recipient = button.data('id')
                   var modal = $(this)
-                  modal.find('#btnConf').attr("href","/category/delete/" + recipient)
+                  modal.find('#btnConf').attr("href","/city/delete/" + recipient)
                 })
            /*]]>*/
-        </script>
-     </body>
+        </script> 
+    </body>
 </html>
